@@ -9,7 +9,11 @@ and this project adheres to `Semantic Versioning <http://semver.org/>`_
 UNRELEASED VERSION
 ------------------
 
+Fixed
+~~~~~
 
+- Bug in the the create_object function in the selection of the non-history object
+- Bug in the setting of project properties (due to the lack of a parent)
 
 0.3.1 - 2017-09-04
 ------------------
